<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminPanelActivity"
    android:background="@color/blue" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingBottom="20dp"
            android:text="@string/panel"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/outline_button"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/clean"
            android:drawablePadding="5sp"
            android:drawableTint="@color/white"
            android:fontFamily="@font/roboto_light"
            android:paddingHorizontal="10sp"
            android:text="@string/reset_base"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/btnConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/outline_button"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/pencil"
            android:drawablePadding="5sp"
            android:drawableTint="@color/white"
            android:fontFamily="@font/roboto_light"
            android:paddingHorizontal="10sp"
            android:text="@string/config_ip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/btnStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/outline_button"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/add"
            android:drawablePadding="5sp"
            android:drawableTint="@color/white"
            android:fontFamily="@font/roboto_light"
            android:paddingHorizontal="10sp"
            android:text="@string/inventario"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>