<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lefty"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgDesc"
                app:srcCompat="@drawable/left" />

            <contifico.kiosko_app.sale.HorizontalScrollMenuView
                android:id="@+id/categoriesMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp" />

            <ImageView
                android:id="@+id/righty"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgDesc"
                app:srcCompat="@drawable/right" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="2"
            android:background="@drawable/border_up"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_up"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/mi_orden"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/border_up"
            android:padding="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/sell"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_up"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical|end"
                android:paddingEnd="10dp"
                android:text="@string/precio_total"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/green">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_button"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/continuar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeStepGranularity="0.1sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_light"
                android:text="@string/powered"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/contifico"
                android:layout_width="98dp"
                android:layout_height="17dp"
                android:contentDescription="@string/powered"
                app:srcCompat="@drawable/contifico" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>